# key2words

./: .gitignore  Cargo.toml  README.org  Trunk.toml  app-2ba1de5347c041f.js  app-2ba1de5347c041f_bg.wasm  app-798f377a45a1b2b0.js  app-798f377a45a1b2b0_bg.wasm  app.js  app_bg.wasm  bulma.0.9.4.min.css  index.html  key2words-2289f8b5af8c1827.js  key2words-2289f8b5af8c1827_bg.wasm  key2words-f004f39a9db281ac.js  pub.patch  service_worker.js  worker.js  worker_bg.wasm
cli/: Cargo.toml  build.rs
cli/src/: lib.rs  main.rs
core/: Cargo.toml  build.rs  sequoia-time.patch
core/src/: lib.rs
src/: agent.rs  cli.rs  keys.rs  lib.rs  main.rs  web.rs
web/: .taurignore  Cargo.toml  Trunk.toml  index.html  manifest.json  service_worker.js
web/src/: agent.rs  lib.rs
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: lib.rs  main.rs
