[workspace]
members = [
    "core",
    "cli",
    "web",
    "web/src-tauri"
]

default-members = ["cli", "core"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bip39 = { version = "2.0", features = ["rand"]}
serde = { version = ">=1.0.184", features = ["derive"] } # pin to avoid prebuilt binaries from 1.0.172 - 1.0.183

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
