[workspace]
members = [
    "core",
    "cli",
    "web",
    "web/src-tauri"
]

default-members = ["cli", "core"]

resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
bip39 = { version = "2.0", features = ["rand"]}
serde = { version = ">=1.0.184", features = ["derive"] } # pin to avoid prebuilt binaries from 1.0.172 - 1.0.183
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
yew = "0.21.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[patch.crates-io]
sequoia-openpgp = { path = "./core/target/patch/sequoia-openpgp-1.22.0" }
