[package]
name = "key2words-cli"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[features]
jemalloc = ["tikv-jemallocator"] # causes eyra programs to hang
nightly = ["eyra"] # requires linux nightly
default = ["jemalloc"]

[dependencies]
key2words-core = { version = "0.1.0", path = "../core" }
key2words-web = { version = "0.1.0", path = "../web" }
anyhow = { workspace = true }
bip39 = { workspace = true }

clap = { version = "4.4", features = ["derive"]}
tokio = { version = "1.34", features = ["full"] }
yew = { version = "0.21.0", features = ["ssr"]}
tikv-jemallocator = { version = "0.5", optional = true }
eyra = { version = "0.16.5", features = ["log", "env_logger"], optional = true }

[patch.crates-io]
sequoia-openpgp = { path = "../core/target/patch/sequoia-openpgp-1.17.0" }
