[package]
name = "key2words-cli"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[features]
yew-ssr = ["yew", "key2words-web/hydration", "axum", "tower", "tower-http"]
jemalloc = ["tikv-jemallocator"] # causes eyra programs to hang with futex
tracing-cli = ["tracing-chrome", "tracing-subscriber", "tokio/tracing", "console-subscriber"] # conflicts with eyra log features
nightly = ["eyra"] # requires linux nightly
default = ["tracing-cli", "yew-ssr", "jemalloc"]
#default = ["tracing-cli", "yew-ssr", "eyra"]


[dependencies]
key2words-core = { version = "0.1.0", path = "../core" }
anyhow = { workspace = true }
bip39 = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }

# web features
key2words-web = { version = "0.1.0", path = "../web", optional = true }
yew = { workspace = true, features = ["ssr"], optional = true}
axum = { version = "0.8", features = ["tracing"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }

# tracing features
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
console-subscriber = { version = "0.5", optional = true }
# alloc features
tikv-jemallocator = { version = "0.6", optional = true }
eyra = { version = "0.22", optional = true }


[patch.crates-io]
sequoia-openpgp = { path = "../core/target/patch/sequoia-openpgp-2.2.0" }
