[package]
name = "key2words-core"
version = "0.1.0"
edition = "2021"
rust = ">=1.75" # set to 1.75 for async traits
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[dev-dependencies]
base64ct = { version = "1.6.0", features = ["alloc"]}
tokio = { version = "1.37", features = ["rt", "macros"] }

[dependencies]
anyhow = { workspace = true }
bip39 = { workspace = true }
tracing = { workspace = true }

sha3 = "0.10"
sha2 = "0.10"
zeroize = "1.7"
ssh-key = { version = "0.6", features = ["alloc", "std", "ed25519", "encryption", "getrandom"] }
base32ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind", "clock"] }
sequoia-openpgp = { default-features = false, features = ["crypto-rust",  "allow-experimental-crypto", "allow-variable-time-crypto"], version = "1.20.0"} #, path = "./target/patch/sequoia-openpgp-1.17.0" } #path = "../sequoia/openpgp"}
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2" 

[package.metadata.patch.sequoia-openpgp]
version = "1.20.0"
patches = [
    { path = "sequoia-time.patch", source = "GithubPrDiff" }
]

[patch.crates-io]
sequoia-openpgp = { path = "./target/patch/sequoia-openpgp-1.20.0" }

[build-dependencies]
cargo-patch = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
