[package]
name = "key2words-core"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[dev-dependencies]
base64ct = { version = "1.8", features = ["alloc"]}
tokio = { version = "1.48", features = ["rt", "macros"] }

[dependencies]
anyhow = { workspace = true }
bip39 = { workspace = true }
tracing = { workspace = true }

sha3 = "0.10"
sha2 = "0.10"
zeroize = "1.8"
ssh-key = { version = "0.6", features = ["alloc", "std", "ed25519", "encryption", "getrandom"] }
base32ct = { version = "0.3", features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind", "clock"] }
sequoia-openpgp = { default-features = false, features = ["crypto-rust",  "allow-experimental-crypto", "allow-variable-time-crypto"], version = "2.2.0"} #, path = "./target/patch/sequoia-openpgp-1.17.0" }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2" 

[package.metadata.patch.sequoia-openpgp]
version = "2.2.0"
patches = [
    { path = "sequoia-time.patch", source = "GithubPrDiff" }
]

[patch.crates-io]
sequoia-openpgp = { path = "./target/patch/sequoia-openpgp-2.2.0" }

[build-dependencies]
cargo-patch = { git = "https://github.com/jamartin9/cargo-patch.git", branch = "2024edition"}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
