[package]
name = "key2words-web"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[dependencies]
key2words-core = { version = "0.1.0", path = "../core" }
anyhow = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }


gloo = "0.8.0"
wasm-bindgen = "0.2"
yew = { version = "0.20.0", features = ["csr"]}
yew-agent = "0.2.0"
ybc = { git = "https://github.com/jamartin9/ybc" }#version = "0.4.0" }
stylist = { version = "0.12.1", features = ["yew_integration"]}
getrandom = { version = "0.2.10", features = ["js"]} # stdweb web crypto for rng
web-sys = { version = "^0.3.64", features = ["HtmlElement", "Document", "Element"]}
base64ct = { version = "1.6.0", features = ["alloc"]}
