[package]
name = "key2words-web"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[dependencies]
key2words-core = { version = "0.1.0", path = "../core" }
anyhow = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }


gloo = "0.10.0"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"]}
yew-agent = "0.3.0"
ybc = { git = "https://github.com/jamartin9/ybc", branch = "yew-0.21"}#version = "0.4.0" }
getrandom = { version = "0.2.10", features = ["js"]} # stdweb web crypto for rng
web-sys = { version = "^0.3.64", features = ["HtmlElement", "Document", "Element"]}
base64ct = { version = "1.6.0", features = ["alloc"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z" # opt for size
