[package]
name = "key2words-web"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.0-or-later" # (apache or mit) and lgplv2+ and BSD-3clause
authors = ["Justin Martin"]

[features]
tracing-yew = ["tracing-web", "tracing-subscriber"]
hydration = ["yew/hydration"]
default = ["tracing-yew"]

[dependencies]
key2words-core = { version = "0.1.0", path = "../core" }
anyhow = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

tracing-subscriber = { workspace = true, optional = true, features = ["time"] }
tracing-web = { version = "0.1", optional = true }

gloo = "0.11.0" # for document download
wasm-bindgen = "0.2"
yew = { workspace = true, features = ["csr"] }
yew-agent = "0.3.0"
ybc = { git = "https://github.com/jamartin9/ybc", branch = "yew-0.21" }#version = "0.4.0" }
getrandom = { version = "0.3", features = ["wasm_js"]} # stdweb web crypto for rng
web-sys = { version = "0.3", features = ["HtmlElement", "Document", "Element"]}
base64ct = { version = "1.8", features = ["alloc"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z" # opt for size
