[package]
name = "key2words-tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Justin Martin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }

tracing-subscriber = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
tracing-tauri = ["tracing-chrome", "tracing-subscriber", "tauri/tracing"]
default = ["tracing-tauri"]
